--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet">
+        <link rel="stylesheet" href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">
         <link rel="stylesheet" href="./css/styles.css">
 
     </head>
@@ -16,6 +17,7 @@
     <body>
         <!--верхняя линия-->
         <header class="header-block">
+            <div class="container">
             <nav class="nav-section">
                 <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
                 <ul class="nav-section-items list">
@@ -28,6 +30,7 @@
                 <li><a class="header-item link " href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
+            <div class="container">
         </header>
         <main class="main-block">
             <!-- Шапка-->
@@ -109,6 +112,7 @@
                         </a>
                     </li>
                 </ul>
+                <div class="container">
             </section>
         </main>
         <!--подвал-->
