--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+              integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+              crossorigin="anonymous" />
         <link rel="stylesheet" href="./css/styles.css">
 
     </head>
@@ -30,93 +32,97 @@
                 <li><a class="header-item link " href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-            <div class="container">
+            </div>
         </header>
         <main class="main-block">
             <!-- Шапка-->
             <h1 hidden>Портфолио</h1>
             <section class="porfolio-section">
-                <!--Фильтры-->
-                <h2 hidden>Фильтры</h2>
-                <ul class="filter-buttons list">
-                    <li ><button class="filter-button current-filter" type="button">Все</button></li>
-                    <li ><button class="filter-button" type="button">Веб-сайты</button></li>
-                    <li ><button class="filter-button" type="button">Дизайн</button></li>
-                    <li ><button class="filter-button" type="button">Маркетинг</button></li>
-                    <li ><button class="filter-button" type="button">Приложения</button></li>
-                </ul>
-                <!-- Проекты-->
-                <h2 hidden>Проекты</h2>
-                <ul class="project-items list">
-                    <li class="project-item">
-                        <a href="#" class="link">
-                        <img class="project-img" src="./images/project-1.jpg" alt="Технокряк" width="370">
-                        <h3 class="project-title">Технокряк</h3>
-                        <p class="project-text">Веб-сайт</p>
-                        </a>
-                    </li>
-                    <li class="project-item">
-                        <a href="#" class="link">
-                        <img class="project-img" src="./images/project-2.jpg" alt="Постер" width="370">
-                        <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                        <p class="project-text">Дизайн</p>
-                        </a>
-                    </li>
-                    <li class="project-item" >
-                        <a href="#" class="link">
-                        <img class="project-img" src="./images/project-3.jpg" alt="Ресторан" width="370">
-                        <h3 class="project-title" >Ресторан <span lang="en">Seafood</span> </h3>
-                        <p class="project-text">Приложение</p>
-                        </a>
-                    </li>
-                    <li class="project-item">
-                        <a href="#" class="link">
-                        <img class="project-img" src="./images/project-4.jpg" alt="Проект" width="370">
-                        <h3 class="project-title">Проект <span lang="en">Prime</span></h3>
-                        <p class="project-text">Маркетинг</p>
-                        </a>
-                    </li>
-                    <li class="project-item">
-                        <a href="#" class="link">
-                        <img class="project-img" src="./images/project-5.jpg" alt="Проект" width="370">
-                        <h3 class="project-title">Проект <span lang="en">Boxes</span></h3>
-                        <p class="project-text">Приложение</p>
-                        </a>
-                    </li>
-                    <li class="project-item">
-                        <a href="#" class="link"> 
-                        <img class="project-img" src="./images/project-6.jpg" alt="Веб-сайт" width="370">
-                        <h3 class="project-title">Inspiration has no Borders</h3>
-                        <p class="project-text">Веб-сайт</p>
-                        </a>
-                    </li>
-                    <li class="project-item">
-                        <a href="#" class="link">
-                        <img class="project-img" src="./images/project-7.jpg" alt="Издание" width="370">
-                        <h3 class="project-title">Издание Limited Edition</h3>
-                        <p class="project-text">Дизайн</p>
-                        </a>
-                    </li>
-                    <li class="project-item">
-                        <a href="#" class="link">
-                        <img class="project-img" src="./images/project-8.jpg" alt="Проект" width="370">
-                        <h3 class="project-title">Проект LAB</h3>
-                        <p class="project-text">Маркетинг</p>
-                        </a>
-                    </li>
-                    <li class="project-item">
-                        <a href="#" class="link">
-                        <img class="project-img" src="./images/project-9.jpg" alt="Приложение" width="370">
-                        <h3 class="project-title">Growing Business</h3>
-                        <p class="project-text">Приложение</p>
-                        </a>
-                    </li>
-                </ul>
                 <div class="container">
+                    <!--Фильтры-->
+                    <h2 hidden>Фильтры</h2>
+                    <ul class="filter-buttons list">
+                            <li ><button class="filter-button current-filter" type="button">Все</button></li>
+                            <li ><button class="filter-button" type="button">Веб-сайты</button></li>
+                            <li ><button class="filter-button" type="button">Дизайн</button></li>
+                            <li ><button class="filter-button" type="button">Маркетинг</button></li>
+                            <li ><button class="filter-button" type="button">Приложения</button></li>
+                    </ul>
+                </div>
+                <div class="container">
+                    <!-- Проекты-->
+                    <h2 hidden>Проекты</h2>
+                    <ul class="project-items list">
+                            <li>
+                                <a href="#" class="link">
+                                <img class="project-img" src="./images/project-1.jpg" alt="Технокряк" width="370">
+                                <h3 class="project-title">Технокряк</h3>
+                                <p class="project-text">Веб-сайт</p>
+                                </a>
+                            </li>
+                            <li class="project-item">
+                                <a href="#" class="link">
+                                <img class="project-img" src="./images/project-2.jpg" alt="Постер" width="370">
+                                <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                                <p class="project-text">Дизайн</p>
+                                </a>
+                            </li>
+                            <li class="project-item" >
+                                <a href="#" class="link">
+                                <img class="project-img" src="./images/project-3.jpg" alt="Ресторан" width="370">
+                                <h3 class="project-title" >Ресторан <span lang="en">Seafood</span> </h3>
+                                <p class="project-text">Приложение</p>
+                                </a>
+                            </li>
+                            <li class="project-item">
+                                <a href="#" class="link">
+                                <img class="project-img" src="./images/project-4.jpg" alt="Проект" width="370">
+                                <h3 class="project-title">Проект <span lang="en">Prime</span></h3>
+                                <p class="project-text">Маркетинг</p>
+                                </a>
+                            </li>
+                            <li class="project-item">
+                                <a href="#" class="link">
+                                <img class="project-img" src="./images/project-5.jpg" alt="Проект" width="370">
+                                <h3 class="project-title">Проект <span lang="en">Boxes</span></h3>
+                                <p class="project-text">Приложение</p>
+                                </a>
+                            </li>
+                            <li class="project-item">
+                                <a href="#" class="link"> 
+                                <img class="project-img" src="./images/project-6.jpg" alt="Веб-сайт" width="370">
+                                <h3 class="project-title">Inspiration has no Borders</h3>
+                                <p class="project-text">Веб-сайт</p>
+                                </a>
+                            </li>
+                            <li class="project-item">
+                                <a href="#" class="link">
+                                <img class="project-img" src="./images/project-7.jpg" alt="Издание" width="370">
+                                <h3 class="project-title">Издание Limited Edition</h3>
+                                <p class="project-text">Дизайн</p>
+                                </a>
+                            </li>
+                            <li class="project-item">
+                                <a href="#" class="link">
+                                <img class="project-img" src="./images/project-8.jpg" alt="Проект" width="370">
+                                <h3 class="project-title">Проект LAB</h3>
+                                <p class="project-text">Маркетинг</p>
+                                </a>
+                            </li>
+                            <li class="project-item">
+                                <a href="#" class="link">
+                                <img class="project-img" src="./images/project-9.jpg" alt="Приложение" width="370">
+                                <h3 class="project-title">Growing Business</h3>
+                                <p class="project-text">Приложение</p>
+                                </a>
+                            </li>
+                    </ul>
+                </div>
             </section>
         </main>
         <!--подвал-->
         <footer class="footer-block">
+            <div class="container">
             <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
             <address class="address-section">
                 <ul class="address-items list">
@@ -131,6 +137,7 @@
                     </li>
                 </ul>
             </address>
+            </div>
         </footer>
     </body>
 </html>
