--- a/index.html
+++ b/index.html
@@ -19,32 +19,41 @@
         <!--верхняя линия-->
         <header class="header-block">
             <div class="container header-container">
-            <nav class="nav-section">
-                <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
-                <ul class="nav-section-items list">
-                    <li ><a class="nav-section-item link current" href="./index.html">Студия</a></li>
-                    <li ><a class="nav-section-item link" href="./portfolio.html">Портфолио</a></li>
-                    <li ><a class="nav-section-item link" href="">Контакты</a></li>
-                </ul>                
-            </nav>
-            <ul class="header-items list">
-                <li ><a class="header-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li ><a class="header-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+                <nav class="nav-section">
+                    <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
+                    <ul class="nav-section-items list">
+                        <li class="nav-section-li">
+                            <a class="nav-section-item link current" href="./index.html">Студия</a>
+                        </li>
+                        <li class="nav-section-li">
+                            <a class="nav-section-item link" href="./portfolio.html">Портфолио</a>
+                        </li>
+                        <li class="nav-section-li">
+                            <a class="nav-section-item link" href="">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <ul class="header-items list">
+                    <li class="header-item-li">
+                        <a class="header-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="header-item-li">
+                        <a class="header-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
             </div>
         </header>
+        <!-- Шапка или Hero-->
         <main class="main-block">
-           
-            <!-- Шапка или Hero-->
             <section class="hero-section">
-                <div class="container">
+                <div class="container hero-container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="hero-button" type="button" >Заказать услугу</button>
                 </div>
             </section>
             <!--Особенности-->
             <section class="feature-section">
-                <div class="container">
+                <div class="container feature-container">
                 <h2 hidden>Особенности</h2>
                     <ul class="feature-items list">
                         <li class="feature-item">
@@ -95,7 +104,7 @@
             </section>
             <!--Наша команда-->
             <section class="team-section">
-                <div class="container">
+                <div class="container team-container">
                     <h2 class="team-title">Наша команда</h2>
                     <ul class="team-items list">
                         <li class="team-item">
@@ -124,20 +133,22 @@
         </main>
         <!--подвал-->
         <footer class="footer-block">
-            <div class="container">
+            <div class="container footer-container">
                 <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
                 <address class="address-section">
-                    <ul class="address-items list">
-                        <li>
-                            <a class="address-item link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
-                        </li>
-                        <li>
-                            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        </li>
-                        <li>
-                            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-                        </li>
-                    </ul>
+                    <div class="address-container">
+                        <ul class="address-items list">
+                            <li class="address-li-item">
+                                <a class="address-item link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li class="address-li-item">
+                                <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            </li>
+                            <li class="address-li-item">
+                                <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                    </div>
                 </address>
             </div>
         </footer>
