--- a/portfolio.html
+++ b/portfolio.html
@@ -19,41 +19,51 @@
     <body>
         <!--верхняя линия-->
         <header class="header-block">
-            <div class="container">
-            <nav class="nav-section">
-                <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
-                <ul class="nav-section-items list">
-                    <li><a class="nav-section-item link" href="./index.html">Студия</a></li>
-                    <li><a class="nav-section-item link current" href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="nav-section-item link " href="">Контакты</a></li>
+            <div class="container header-container">
+                <nav class="nav-section">
+                    <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
+                    <ul class="nav-section-items list">
+                        <li class="nav-section-li">
+                            <a class="nav-section-item link current" href="./index.html">Студия</a>
+                        </li>
+                        <li class="nav-section-li">
+                            <a class="nav-section-item link" href="./portfolio.html">Портфолио</a>
+                        </li>
+                        <li class="nav-section-li">
+                            <a class="nav-section-item link" href="">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <ul class="header-items list">
+                    <li class="header-item-li">
+                        <a class="header-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="header-item-li">
+                        <a class="header-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
                 </ul>
-            </nav>
-            <ul class="header-items list">
-                <li><a class="header-item link " href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="header-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
             </div>
         </header>
+        <!-- Шапка-->
         <main class="main-block">
-            <!-- Шапка-->
             <h1 hidden>Портфолио</h1>
             <section class="porfolio-section">
                 <div class="container">
                     <!--Фильтры-->
                     <h2 hidden>Фильтры</h2>
-                    <ul class="filter-buttons list">
-                            <li ><button class="filter-button current-filter" type="button">Все</button></li>
-                            <li ><button class="filter-button" type="button">Веб-сайты</button></li>
-                            <li ><button class="filter-button" type="button">Дизайн</button></li>
-                            <li ><button class="filter-button" type="button">Маркетинг</button></li>
-                            <li ><button class="filter-button" type="button">Приложения</button></li>
-                    </ul>
+                        <ul class="filter-buttons list">
+                            <li class="filter-item"><button class="filter-button current-filter" type="button">Все</button></li>
+                            <li class="filter-item"><button class="filter-button" type="button">Веб-сайты</button></li>
+                            <li class="filter-item"><button class="filter-button" type="button">Приложения</button></li>
+                            <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
+                            <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
+                        </ul>
                 </div>
                 <div class="container">
                     <!-- Проекты-->
                     <h2 hidden>Проекты</h2>
                     <ul class="project-items list">
-                            <li>
+                            <li class="project-item">
                                 <a href="#" class="link">
                                 <img class="project-img" src="./images/project-1.jpg" alt="Технокряк" width="370">
                                 <h3 class="project-title">Технокряк</h3>
@@ -122,21 +132,23 @@
         </main>
         <!--подвал-->
         <footer class="footer-block">
-            <div class="container">
-            <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
-            <address class="address-section">
-                <ul class="address-items list">
-                    <li>
-                        <a class="address-item link address-text " href="">г. Киев, пр-т Леси Украинки, 26</a>
-                    </li>
-                    <li>
-                        <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+            <div class="container footer-container">
+                <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
+                <address class="address-section">
+                    <div class="address-container">
+                    <ul class="address-items list">
+                        <li class="address-li-item" >
+                            <a class="address-item link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="address-li-item">
+                            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="address-li-item">
+                            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                    </div>
+                </address>
             </div>
         </footer>
     </body>
