--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-              integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-              crossorigin="anonymous" />
+              rel="stylesheet">
+        <link rel="stylesheet" href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">     
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     
@@ -93,12 +91,12 @@
             </section>
             <!-- Чем мы занимаемся-->
             <section class="occupation-section">
-                <div class="container">
+                <div class="container occupation-container">
                 <h2 class="occupation-title" >Чем мы занимаемся</h2>
                 <ul class="occupation-items list">
-                    <li ><img class="occupation-img" src="./images/box_1.jpg" alt="Планшет и клавиатура " width="370"></li>
-                    <li ><img class="occupation-img" src="./images/box_2.jpg" alt="Телефон" width="370"></li>
-                    <li ><img class="occupation-img" src="./images/box_3.jpg" alt="Планшет с палитрой цветов" width="370"></li>
+                    <li class="occupation-li"><img class="occupation-img" src="./images/box_1.jpg" alt="Планшет и клавиатура " width="370"></li>
+                    <li class="occupation-li"><img class="occupation-img" src="./images/box_2.jpg" alt="Телефон" width="370"></li>
+                    <li class="occupation-li"><img class="occupation-img" src="./images/box_3.jpg" alt="Планшет с палитрой цветов" width="370"></li>
                 </ul>
                 </div>
             </section>
