--- a/portfolio.html
+++ b/portfolio.html
@@ -8,10 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-              integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-              crossorigin="anonymous" />
+              rel="stylesheet">
+        <link rel="stylesheet" href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">
         <link rel="stylesheet" href="./css/styles.css">
 
     </head>
@@ -24,10 +22,10 @@
                     <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
                     <ul class="nav-section-items list">
                         <li class="nav-section-li">
-                            <a class="nav-section-item link current" href="./index.html">Студия</a>
+                            <a class="nav-section-item link " href="./index.html">Студия</a>
                         </li>
                         <li class="nav-section-li">
-                            <a class="nav-section-item link" href="./portfolio.html">Портфолио</a>
+                            <a class="nav-section-item link current" href="./portfolio.html">Портфолио</a>
                         </li>
                         <li class="nav-section-li">
                             <a class="nav-section-item link" href="">Контакты</a>
