--- a/portfolio.html
+++ b/portfolio.html
@@ -61,69 +61,87 @@
                     <!-- Проекты-->
                     <h2 hidden>Проекты</h2>
                     <ul class="project-items list">
-                            <li class="project-item">
-                                <a href="#" class="link">
+                        <li class="project-item">
+                            <a href="#" class="link">
                                 <img class="project-img" src="./images/project-1.jpg" alt="Технокряк" width="370">
-                                <h3 class="project-title">Технокряк</h3>
-                                <p class="project-text">Веб-сайт</p>
-                                </a>
-                            </li>
-                            <li class="project-item">
-                                <a href="#" class="link">
+                                <div class="project-content">
+                                    <h3 class="project-title">Технокряк</h3>
+                                    <p class="project-text">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project-item">
+                            <a href="#" class="link">
                                 <img class="project-img" src="./images/project-2.jpg" alt="Постер" width="370">
-                                <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                                <p class="project-text">Дизайн</p>
-                                </a>
-                            </li>
-                            <li class="project-item" >
-                                <a href="#" class="link">
+                                <div class="project-content">
+                                    <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                                    <p class="project-text">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project-item" >
+                            <a href="#" class="link">
                                 <img class="project-img" src="./images/project-3.jpg" alt="Ресторан" width="370">
-                                <h3 class="project-title" >Ресторан <span lang="en">Seafood</span> </h3>
-                                <p class="project-text">Приложение</p>
-                                </a>
-                            </li>
-                            <li class="project-item">
-                                <a href="#" class="link">
+                                <div class="project-content">   
+                                    <h3 class="project-title" >Ресторан <span lang="en">Seafood</span> </h3>
+                                    <p class="project-text">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project-item">
+                            <a href="#" class="link">
                                 <img class="project-img" src="./images/project-4.jpg" alt="Проект" width="370">
-                                <h3 class="project-title">Проект <span lang="en">Prime</span></h3>
-                                <p class="project-text">Маркетинг</p>
-                                </a>
-                            </li>
-                            <li class="project-item">
-                                <a href="#" class="link">
+                                <div class="project-content">
+                                    <h3 class="project-title">Проект <span lang="en">Prime</span></h3>
+                                    <p class="project-text">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project-item">
+                            <a href="#" class="link">
                                 <img class="project-img" src="./images/project-5.jpg" alt="Проект" width="370">
-                                <h3 class="project-title">Проект <span lang="en">Boxes</span></h3>
+                                    <div class="project-content">
+                                    <h3 class="project-title">Проект <span lang="en">Boxes</span></h3>
                                 <p class="project-text">Приложение</p>
-                                </a>
-                            </li>
-                            <li class="project-item">
-                                <a href="#" class="link"> 
+                            </div>
+                            </a>
+                        </li>
+                        <li class="project-item">
+                            <a href="#" class="link"> 
                                 <img class="project-img" src="./images/project-6.jpg" alt="Веб-сайт" width="370">
-                                <h3 class="project-title">Inspiration has no Borders</h3>
+                                    <div class="project-content">
+                                    <h3 class="project-title">Inspiration has no Borders</h3>
                                 <p class="project-text">Веб-сайт</p>
-                                </a>
-                            </li>
-                            <li class="project-item">
-                                <a href="#" class="link">
+                            </div>
+                            </a>
+                        </li>
+                        <li class="project-item">
+                            <a href="#" class="link">
                                 <img class="project-img" src="./images/project-7.jpg" alt="Издание" width="370">
-                                <h3 class="project-title">Издание Limited Edition</h3>
-                                <p class="project-text">Дизайн</p>
-                                </a>
-                            </li>
-                            <li class="project-item">
-                                <a href="#" class="link">
+                                <div class="project-content">
+                                    <h3 class="project-title">Издание Limited Edition</h3>
+                                    <p class="project-text">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project-item">
+                            <a href="#" class="link">
                                 <img class="project-img" src="./images/project-8.jpg" alt="Проект" width="370">
-                                <h3 class="project-title">Проект LAB</h3>
-                                <p class="project-text">Маркетинг</p>
-                                </a>
-                            </li>
-                            <li class="project-item">
-                                <a href="#" class="link">
+                                <div class="project-content">
+                                    <h3 class="project-title">Проект LAB</h3>
+                                    <p class="project-text">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project-item">
+                            <a href="#" class="link">
                                 <img class="project-img" src="./images/project-9.jpg" alt="Приложение" width="370">
-                                <h3 class="project-title">Growing Business</h3>
-                                <p class="project-text">Приложение</p>
-                                </a>
-                            </li>
+                                <div class="project-content">
+                                    <h3 class="project-title">Growing Business</h3>
+                                    <p class="project-text">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </section>
