--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
               rel="stylesheet">
-        <link rel="stylesheet" href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">
+        <!--<link rel="stylesheet" href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer">
         <link rel="stylesheet" href="./css/styles.css">
 
     </head>
@@ -20,30 +23,30 @@
             <div class="container header-container">
                 <nav class="nav-section">
                     <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
-                    <ul class="nav-section-items list">
-                        <li class="nav-section-li">
-                            <a class="nav-section-item link " href="./index.html">Студия</a>
+                    <ul class="nav-section-list list">
+                        <li class="nav-section-item">
+                            <a class="nav-section-link link " href="./index.html">Студия</a>
                         </li>
-                        <li class="nav-section-li">
-                            <a class="nav-section-item link current" href="./portfolio.html">Портфолио</a>
+                        <li class="nav-section-item">
+                            <a class="nav-section-link link current" href="./portfolio.html">Портфолио</a>
                         </li>
-                        <li class="nav-section-li">
-                            <a class="nav-section-item link" href="">Контакты</a>
+                        <li class="nav-section-item">
+                            <a class="nav-section-link link" href="">Контакты</a>
                         </li>
                     </ul>
                 </nav>
-                <ul class="header-items list">
-                    <li class="header-item-li">
-                        <a class="header-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <ul class="header-list list">
+                    <li class="header-item">
+                        <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li class="header-item-li">
-                        <a class="header-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="header-item">
+                        <a class="header-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
         </header>
         <!-- Шапка-->
-        <main class="main-block">
+        <main>
             <h1 hidden>Портфолио</h1>
             <section class="porfolio-section">
                 <div class="container">
