--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
               rel="stylesheet">
-        <link rel="stylesheet" href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">     
+        <!--<link rel="stylesheet" href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">-->     
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer">
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     
@@ -19,30 +22,30 @@
             <div class="container header-container">
                 <nav class="nav-section">
                     <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
-                    <ul class="nav-section-items list">
-                        <li class="nav-section-li">
-                            <a class="nav-section-item link current" href="./index.html">Студия</a>
+                    <ul class="nav-section-list list">
+                        <li class="nav-section-item">
+                            <a class="nav-section-link link current" href="./index.html">Студия</a>
                         </li>
-                        <li class="nav-section-li">
-                            <a class="nav-section-item link" href="./portfolio.html">Портфолио</a>
+                        <li class="nav-section-item">
+                            <a class="nav-section-link link" href="./portfolio.html">Портфолио</a>
                         </li>
-                        <li class="nav-section-li">
-                            <a class="nav-section-item link" href="">Контакты</a>
+                        <li class="nav-section-item">
+                            <a class="nav-section-link link" href="">Контакты</a>
                         </li>
                     </ul>
                 </nav>
-                <ul class="header-items list">
-                    <li class="header-item-li">
-                        <a class="header-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <ul class="header-list list">
+                    <li class="header-item">
+                        <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li class="header-item-li">
-                        <a class="header-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="header-item">
+                        <a class="header-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
         </header>
         <!-- Шапка или Hero-->
-        <main class="main-block">
+        <main>
             <section class="hero-section">
                 <div class="container hero-container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -50,10 +53,10 @@
                 </div>
             </section>
             <!--Особенности-->
-            <section class="feature-section">
-                <div class="container feature-container">
-                <h2 hidden>Особенности</h2>
-                    <ul class="feature-items list">
+            <section class="section feature-section">
+                <div class="container">
+                <h2 class="hidden">Особенности</h2>
+                    <ul class="feature-list list">
                         <li class="feature-item">
                             <h3 class="feature-item-title">Внимание к деталям</h3>
                             <p class="feature-text">
@@ -90,21 +93,21 @@
                 </div>
             </section>
             <!-- Чем мы занимаемся-->
-            <section class="occupation-section">
-                <div class="container occupation-container">
+            <section class="section occupation-section">
+                <div class="container">
                 <h2 class="occupation-title" >Чем мы занимаемся</h2>
-                <ul class="occupation-items list">
-                    <li class="occupation-li"><img class="occupation-img" src="./images/box_1.jpg" alt="Планшет и клавиатура " width="370"></li>
-                    <li class="occupation-li"><img class="occupation-img" src="./images/box_2.jpg" alt="Телефон" width="370"></li>
-                    <li class="occupation-li"><img class="occupation-img" src="./images/box_3.jpg" alt="Планшет с палитрой цветов" width="370"></li>
+                <ul class="occupation-list list">
+                    <li class="occupation-item"><img class="occupation-img" src="./images/box_1.jpg" alt="Планшет и клавиатура " width="370"></li>
+                    <li class="occupation-item"><img class="occupation-img" src="./images/box_2.jpg" alt="Телефон" width="370"></li>
+                    <li class="occupation-item"><img class="occupation-img" src="./images/box_3.jpg" alt="Планшет с палитрой цветов" width="370"></li>
                 </ul>
                 </div>
             </section>
             <!--Наша команда-->
-            <section class="team-section">
-                <div class="container team-container">
+            <section class="section team-section">
+                <div class="container">
                     <h2 class="team-title">Наша команда</h2>
-                    <ul class="team-items list">
+                    <ul class="team-list list">
                         <li class="team-item">
                             <img class="team-img" src="./images/team_card_1.jpg" alt="Игорь Демьяненко" width="270">
                             <h3 class="team-item-title">Игорь Демьяненко</h3>
@@ -151,4 +154,4 @@
             </div>
         </footer>
     </body>
-</html>
+</html>     
