--- a/index.html
+++ b/index.html
@@ -134,22 +134,22 @@
         </main>
         <!--подвал-->
         <footer class="footer-block">
-            <div class="container footer-container">
+            <div class="container">
                 <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
                 <address class="address-section">
-                    <div class="address-container">
-                        <ul class="address-items list">
-                            <li class="address-li-item">
-                                <a class="address-item link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                   
+                        <ul class="address-list list">
+                            <li class="address-item">
+                                <a class="address-link link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
                             </li>
-                            <li class="address-li-item">
-                                <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            <li class="address-item">
+                                <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                             </li>
-                            <li class="address-li-item">
-                                <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            <li class="address-item">
+                                <a class="address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                             </li>
                         </ul>
-                    </div>
+                    
                 </address>
             </div>
         </footer>
