--- a/portfolio.html
+++ b/portfolio.html
@@ -47,23 +47,22 @@
         </header>
         <!-- Шапка-->
         <main>
-            <h1 hidden>Портфолио</h1>
-            <section class="porfolio-section">
+            <h1 class="hidden">Портфолио</h1>
+            <section class="section">
                 <div class="container">
                     <!--Фильтры-->
-                    <h2 hidden>Фильтры</h2>
-                        <ul class="filter-buttons list">
+                    <h2 class="hidden">Фильтры</h2>
+                        <ul class="filter-list list">
                             <li class="filter-item"><button class="filter-button current-filter" type="button">Все</button></li>
                             <li class="filter-item"><button class="filter-button" type="button">Веб-сайты</button></li>
                             <li class="filter-item"><button class="filter-button" type="button">Приложения</button></li>
                             <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
                             <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
                         </ul>
-                </div>
-                <div class="container">
+                
                     <!-- Проекты-->
                     <h2 hidden>Проекты</h2>
-                    <ul class="project-items list">
+                    <ul class="project-list list">
                         <li class="project-item">
                             <a href="#" class="link">
                                 <img class="project-img" src="./images/project-1.jpg" alt="Технокряк" width="370">
@@ -155,15 +154,15 @@
                 <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
                 <address class="address-section">
                     <div class="address-container">
-                    <ul class="address-items list">
-                        <li class="address-li-item" >
-                            <a class="address-item link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                    <ul class="address-list list">
+                        <li class="address-item" >
+                            <a class="address-link link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
-                        <li class="address-li-item">
-                            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <li class="address-item">
+                            <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
-                        <li class="address-li-item">
-                            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class="address-item">
+                            <a class="address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
                     </div>
@@ -171,4 +170,4 @@
             </div>
         </footer>
     </body>
-</html>
+</html> 
